--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,10 +38,18 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
+
+mongodb.default.db = "game_server"
+# Optional values
+mongodb.default.host = "localhost"
+#mongodb.default.port = 27017
+mongodb.default.user = "root"
+mongodb.default.password = "123456"
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Logger
 # ~~~~~
