--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="@9GZ:AZ`^BxtSxy<a@WR6qr7l[YohJhRY1=70WvSg>cmBbF>ax3oPPBK=qm<Udvl"
+application.secret="FMK$*(FGNFO#cj#(Fjds#NBFLT)#$#)#3efefdvR6qr7l[GJ$#FkcdYR3edksax3oPPBK=qm<Udvl"
 
 # The application languages
 # ~~~~~
@@ -37,6 +37,8 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+
+dbplugin=disabled
 
 
 mongodb.default.db = "game_server"
