[-] migrate to reactive mongo

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,13 @@ application.langs="en"
 dbplugin=disabled
 
 
+# reactive mongo conf
+
+mongodb.uri = "mongodb://root:123456@localhost:27017/game_server"
+
+
+# play salat conf Mongo Conf
+
 mongodb.default.db = "game_server"
 # Optional values
 mongodb.default.host = "localhost"
