[-] migrate to reactive mongo - basic methods

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,6 +17,9 @@ application.langs="en"
 # Default to Global in the root package.
 # application.global=Global
 
+
+users.secret="dgf24*35t$832rgfdvgdflksefdGfe3GT#*#)30"
+
 # Router 
 # ~~~~~
 # Define the Router object to use for this application.
