[+] game actor - model update, user auth routine fixes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# application.global=Global
+application.global=common.Global
 
 
 users.secret="dgf24*35t$832rgfdvgdflksefdGfe3GT#*#)30"
@@ -74,5 +74,5 @@ logger.root=ERROR
 logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application=TRACE
 
